Fix errors in paper and representative files from comprehensive review
Paper (main.tex):
- Fix "six modules" → "seven modules" (2 locations)
- Fix PhysicsVAE latent dim 64 → 128 in appendix table
- Fix S2A Plant→Fly rho 0.12 → 0.13 to match Table 5
- Fix speedup "10,000×" → "up to 12,000×" to match results
- Clarify DeepSTARR "352K sequences" → "352K training sequences"
- Fix "Sei" → "CREsted" (correct Taskiran et al. 2024 attribution)
- Rename "DREAM-RNN" → "DeepSTARR-CNN" (accurate baseline name)

fusemap_models.py:
- Fix header: SELayer reduction, RCEquivariantStem params, GDC acronym
- Fix metric values to match comparison table (HepG2, WTC11)
- Fix ClusterSpace receptive field docstring (14/28bp → 13/25bp)
- Fix bare except clause, add Optional[int] type annotations

fusemap_physics.py:
- Fix header feature count (521 → default 500)
- Fix extract_feature_columns API to match source (DataFrame)
- Fix PhysicsAttributor constructor to match source (config object)
- Fix PhysicsConsistencyLoss dict-as-tensor bug

fusemap_training_applications.py:
- Remove @property from method with parameter
- Initialize avg_val_pearson before loop (prevent UnboundLocalError)
- Add missing imports (pandas, Any)
- Fix CompositionValidator call (missing reference_panel arg)
- Add reference_panels_dir to OracleCheckConfig
- Fix BatchComparator scipy.stats import
- Fix animal count comments (~647k → ~968k)

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -69,7 +69,7 @@ $^{1}$Cold Spring Harbor Laboratory\\
 \begin{abstract}
 Deep learning models predict cis-regulatory element (CRE) function with remarkable accuracy, yet synthetic enhancers and promoters designed by these models routinely fail \emph{in vivo}. This gap limits faster biomanufacturing of therapeutic proteins, gene therapies requiring cell-type specific expression, and crops engineered to activate stress-response or growth genes.
 
-\fusemap{} is the first comprehensive framework bridging this gap by integrating biophysics into regulatory DNA prediction and design. The framework comprises seven synergistic components. \physinformer{} and \tileformer{} are the first models predicting biophysical landscapes of DNA: over 500 features spanning thermodynamics, mechanics, electrostatics, and more at 95\% accuracy and 10,000$\times$ the speed of conventional calculations, solving the bottleneck of data limiting biophysical genomics research. \cadence{} achieves state-of-the-art prediction, exceeding top published models in human, fly, plant, and more cell lines. \place{} provides the first post-hoc uncertainty quantification for genomic deep learning models, distinguishing reliable predictions from risky extrapolations. \stwoa{}, a pipeline that predicts regulatory activity from conserved DNA biophysical properties, achieved the first successful zero-shot cross-species transfer for quantitative regulatory activity prediction---bypassing species-specific transcription factor binding sites and sequence motifs that traditional models learn from. \physicsvae{} enables inverse design of CREs with targeted biophysical profiles (64\% reconstruction accuracy), while \oraclecheck{} provides a comprehensive in-silico validation protocol---combining physics conformity, composition hygiene, \place{} confidence, and distributional tests---that flags aberrant designs with GREEN/YELLOW/RED verdicts before costly experiments.
+\fusemap{} is the first comprehensive framework bridging this gap by integrating biophysics into regulatory DNA prediction and design. The framework comprises seven synergistic components. \physinformer{} and \tileformer{} are the first models predicting biophysical landscapes of DNA: over 500 features spanning thermodynamics, mechanics, electrostatics, and more at 95\% accuracy and up to 12,000$\times$ the speed of conventional calculations, solving the bottleneck of data limiting biophysical genomics research. \cadence{} achieves state-of-the-art prediction, exceeding top published models in human, fly, plant, and more cell lines. \place{} provides the first post-hoc uncertainty quantification for genomic deep learning models, distinguishing reliable predictions from risky extrapolations. \stwoa{}, a pipeline that predicts regulatory activity from conserved DNA biophysical properties, achieved the first successful zero-shot cross-species transfer for quantitative regulatory activity prediction---bypassing species-specific transcription factor binding sites and sequence motifs that traditional models learn from. \physicsvae{} enables inverse design of CREs with targeted biophysical profiles (64\% reconstruction accuracy), while \oraclecheck{} provides a comprehensive in-silico validation protocol---combining physics conformity, composition hygiene, \place{} confidence, and distributional tests---that flags aberrant designs with GREEN/YELLOW/RED verdicts before costly experiments.
 
 Through experiments spanning multiple species, \fusemap{} reveals biophysics' role in regulatory DNA and demonstrates that conserved biophysical features explain 4$\times$ more regulatory activity in plants than animals, enabling unprecedented zero-shot plant-to-plant transfer ($\rho = 0.70$). For therapeutics, \fusemap{}-designed liver-targeted enhancers achieve 99\% specificity with built-in naturality validation, absent from existing pipelines---ensuring designs work \emph{in vivo}. \fusemap{} represents a paradigm shift toward reliable DNA engineering and unlocks biophysical-informed regulatory genomics---enabling confident synthetic CRE design in any context: gene therapy, protein manufacturing, and even cross-species bioengineering, bypassing costly wet lab assays.
 \end{abstract}
@@ -178,7 +178,7 @@ Cis-regulatory elements (CREs)---enhancers, promoters, and silencers---orchestra
 \label{sec:methods}
 %==============================================================================
 
-\fusemap{} comprises six modules that together enable physics-informed regulatory sequence prediction and design (Figure~\ref{fig:overview}). We describe each module's architecture, training, and integration.
+\fusemap{} comprises seven modules that together enable physics-informed regulatory sequence prediction and design (Figure~\ref{fig:overview}). We describe each module's architecture, training, and integration.
 
 \subsection{Module 1: \cadence{} --- Sequence-to-Activity Prediction}
 \label{sec:cadence}
@@ -624,7 +624,7 @@ We report:
 We compare against pure sequence-to-activity models:
 \begin{itemize}[leftmargin=*,itemsep=0pt]
 \item \textbf{LegNet} \citep{karollus2023legnet}: State-of-the-art convolutional architecture for human MPRA prediction
-\item \textbf{DREAM-RNN} \citep{de2022sequence}: Original LegNet architecture achieving top performance on DeepSTARR/DREAM challenges
+\item \textbf{DeepSTARR-CNN} \citep{de2022sequence}: CNN model from the DeepSTARR benchmark, achieving strong baseline performance on STARR-seq data
 \end{itemize}
 
 \FloatBarrier
@@ -883,7 +883,7 @@ Fly & Plants & -0.32 \\
 
 \textbf{Within-human transfer.} More modest gains within human cell types ($\rho=0.26$ vs 0.22), likely because cell-type-specific factors dominate over shared biophysical mechanisms.
 
-\textbf{Cross-kingdom limits.} Plant$\rightarrow$Fly transfer fails ($\rho=0.12$), and Fly$\rightarrow$Plant shows negative correlation ($\rho=-0.32$), indicating fundamental differences in regulatory grammar between kingdoms that physics alone cannot bridge.
+\textbf{Cross-kingdom limits.} Plant$\rightarrow$Fly transfer fails ($\rho=0.13$), and Fly$\rightarrow$Plant shows negative correlation ($\rho=-0.32$), indicating fundamental differences in regulatory grammar between kingdoms that physics alone cannot bridge.
 
 \begin{figure}[htbp]
 \centering
@@ -1160,7 +1160,7 @@ We evaluated \oraclecheck{} on therapeutically designed enhancer sequences gener
 
 \begin{table}[htbp]
 \centering
-\caption{\textbf{Comparison with baselines.} \fusemap{} matches LegNet on human MPRA, outperforms DREAM-RNN on DeepSTARR, and uniquely enables cross-species transfer.}
+\caption{\textbf{Comparison with baselines.} \fusemap{} matches LegNet on human MPRA, outperforms DeepSTARR-CNN on DeepSTARR, and uniquely enables cross-species transfer.}
 \label{tab:comparison}
 \small
 \resizebox{\columnwidth}{!}{%
@@ -1169,7 +1169,7 @@ We evaluated \oraclecheck{} on therapeutically designed enhancer sequences gener
 Method & K562 $r$ & DeepSTARR Hk $r$ & Cross-sp. $\rho$ \\
 \midrule
 LegNet \citep{karollus2023legnet} & 0.811 & --- & N/A \\
-DREAM-RNN \citep{de2022sequence} & --- & 0.779 & N/A \\
+DeepSTARR-CNN \citep{de2022sequence} & --- & 0.779 & N/A \\
 \midrule
 \fusemap{} & \textbf{0.809} & \textbf{0.920} & \textbf{0.70} \\
 \bottomrule
@@ -1181,7 +1181,7 @@ The full \fusemap{} framework performs competitively or better than baselines (T
 
 \textbf{Human MPRA.} \cadence{} matches LegNet on K562 (0.809 vs 0.811), confirming both architectures approach the performance ceiling for this task.
 
-\textbf{Drosophila STARR-seq.} \cadence{} significantly outperforms DREAM-RNN (+18\% on Hk: 0.920 vs 0.779).
+\textbf{Drosophila STARR-seq.} \cadence{} significantly outperforms DeepSTARR-CNN (+18\% on Hk: 0.920 vs 0.779).
 
 \textbf{Uncertainty quantification.} Only \fusemap{} provides calibrated confidence intervals.
 
@@ -1209,10 +1209,10 @@ The full \fusemap{} framework performs competitively or better than baselines (T
 \addplot[fill=gray!60] coordinates {(K562,0.811) (DeepSTARR,0.779)};
 \addplot[fill=red!60] coordinates {(K562,0.809) (DeepSTARR,0.920)};
 
-\legend{Baselines (LegNet/DREAM-RNN), \cadence{}}
+\legend{Baselines (LegNet/DeepSTARR-CNN), \cadence{}}
 \end{axis}
 \end{tikzpicture}
-\caption{\textbf{Comparison with sequence-to-activity baselines.} \cadence{} (red) matches LegNet on K562 human MPRA (0.809 vs 0.811) and significantly outperforms DREAM-RNN on DeepSTARR (+18\%: 0.920 vs 0.779). Baselines shown are task-specific: LegNet for K562, DREAM-RNN for DeepSTARR.}
+\caption{\textbf{Comparison with sequence-to-activity baselines.} \cadence{} (red) matches LegNet on K562 human MPRA (0.809 vs 0.811) and significantly outperforms DeepSTARR-CNN on DeepSTARR (+18\%: 0.920 vs 0.779). Baselines shown are task-specific: LegNet for K562, DeepSTARR-CNN for DeepSTARR.}
 \label{fig:sota_comparison}
 \end{figure}
 
@@ -1271,7 +1271,7 @@ The full \fusemap{} framework performs competitively or better than baselines (T
 \legend{DeepSTARR ($\rho$=0.885)}
 \end{axis}
 \end{tikzpicture}
-\caption{\textbf{\cadence{} learns efficiently from large-scale data.} Validation Spearman $\rho$ vs.\ training epoch on DeepSTARR (352K sequences). The model reaches $\rho>0.80$ by epoch 30, with continued improvement plateauing around epoch 70. Final test performance ($\rho=0.885$) represents state-of-the-art on this benchmark. Data extracted from actual training logs; each point is a real validation checkpoint.}
+\caption{\textbf{\cadence{} learns efficiently from large-scale data.} Validation Spearman $\rho$ vs.\ training epoch on DeepSTARR (352K training sequences). The model reaches $\rho>0.80$ by epoch 30, with continued improvement plateauing around epoch 70. Final test performance ($\rho=0.885$) represents state-of-the-art on this benchmark. Data extracted from actual training logs; each point is a real validation checkpoint.}
 \label{fig:training_curves}
 \end{figure}
 
@@ -1345,7 +1345,7 @@ We demonstrate iterative sequence optimization using gradient ascent through \ca
 \label{sec:related}
 %==============================================================================
 
-\textbf{Deep learning for regulatory sequences.} The field has progressed from convolutional models such as DeepSEA \citep{zhou2015predicting} and Basset \citep{kelley2016basset} to more recent architectures including Basenji \citep{kelley2018sequential}, Enformer \citep{avsec2021effective}, and the Nucleotide Transformer \citep{dalla2023nucleotide}. DeepSTARR \citep{de2022sequence} introduced the LegNet architecture for enhancer activity prediction, achieving strong performance on STARR-seq data. Sei \citep{taskiran2024cell} extended these approaches to cell-type-specific enhancer design. Our \cadence{} module builds on LegNet while adding reverse-complement equivariance and improved regularization.
+\textbf{Deep learning for regulatory sequences.} The field has progressed from convolutional models such as DeepSEA \citep{zhou2015predicting} and Basset \citep{kelley2016basset} to more recent architectures including Basenji \citep{kelley2018sequential}, Enformer \citep{avsec2021effective}, and the Nucleotide Transformer \citep{dalla2023nucleotide}. DeepSTARR \citep{de2022sequence} introduced the LegNet architecture for enhancer activity prediction, achieving strong performance on STARR-seq data. CREsted \citep{taskiran2024cell} extended these approaches to cell-type-specific enhancer design. Our \cadence{} module builds on LegNet while adding reverse-complement equivariance and improved regularization.
 
 \textbf{Massively parallel reporter assays.} MPRA technology has enabled large-scale measurement of regulatory element activity \citep{agarwal2023massively, ernst2016genome, kircher2019saturation, movva2019deciphering}. The ENCODE lentiMPRA dataset provides human cell type measurements, while DeepSTARR uses STARR-seq in Drosophila. Translation assays \citep{sample2019human} and polyadenylation signals \citep{bogard2019predicting} extend these approaches to other regulatory mechanisms. \fusemap{} was trained and validated on these comprehensive datasets.
 
@@ -1369,7 +1369,7 @@ This work develops computational methods for regulatory sequence prediction and 
 \label{sec:conclusion}
 %==============================================================================
 
-We have introduced \fusemap{}, a framework that improves generalization and cross-species transfer in regulatory genomics through integration of biophysical constraints. Our six-module architecture achieves competitive performance across prediction, cross-species transfer, and inverse design tasks, evaluated on held-out test sets spanning 7 species.
+We have introduced \fusemap{}, a framework that improves generalization and cross-species transfer in regulatory genomics through integration of biophysical constraints. Our seven-module architecture achieves competitive performance across prediction, cross-species transfer, and inverse design tasks, evaluated on held-out test sets spanning 7 species.
 
 \textbf{Key findings.}
 \begin{enumerate}[leftmargin=*,itemsep=0pt]
@@ -1640,7 +1640,7 @@ Total parameters & 12.3M \\
 \toprule
 Component & Specification \\
 \midrule
-Latent dimension & 64 \\
+Latent dimension & 128 \\
 Encoder channels & [64, 128, 256] \\
 Decoder LSTM hidden & 512 \\
 Decoder LSTM layers & 2 \\
